[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pg-here"
version = "0.1.0"
description = "Run a local PostgreSQL instance in your project folder with one command"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "click>=8.0",
    "httpx>=0.27",
    "psycopg[binary]>=3.1",
]

[project.scripts]
pg-here = "pg_here.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/pg_here"]
